# jobsense-parker

./: Cargo.toml  README.md
src/: applicant.rs  lib.rs  main.rs  resume.rs
src/cli/: mod.rs  views.rs
src/crawler/: company.rs  fetcher.rs  google.rs  hackernews.rs  indeed.rs  mod.rs  reddit.rs  remoteok.rs
src/matcher/: mod.rs  scoring.rs
src/models/: mod.rs
src/storage/: mod.rs
